Fixed phx-click issue on ios

--- a/assets/css/game.scss
+++ b/assets/css/game.scss
@@ -3,11 +3,11 @@
   flex-direction: column;
   justify-content: center;
   
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+  // -webkit-user-select: none;
+  // -khtml-user-select: none;
+  // -moz-user-select: none;
+  // -ms-user-select: none;
+  // user-select: none;
 
   h1 {
     width: 1388px;
@@ -135,6 +135,8 @@
   margin: 0 auto;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   transition: box-shadow .25s;
+
+  text-decoration: none;
 }
 
 .clickable:hover {
@@ -205,5 +207,7 @@
 
     font-size: 24px;
     line-height: 40px;
+
+    cursor: pointer;
   }
 }
